# simple_term_rewriter

./: Cargo.toml  LICENSE.txt  README.md  bench.sh
.github/workflows/: ci.yml
benches/: ac_reorder.rs  metrics.rs  random_gen.rs  rewriting.rs
src/: draw_term.rs  lib.rs  metrics.rs  position.rs  process_interface.rs  rule.rs
src/builtin_trs/: builtin_transfo.rs  builtin_transfo_kind.rs  interface.rs  mod.rs  util.rs
src/builtin_trs/rules/: binary_idempotence.rs  defactorize.rs  factorize.rs  flush.rs  mod.rs  modulo_ac_reorderer.rs  modulo_associative_flattened_transfo.rs  reorder_commute.rs  simpl_binary.rs  simpl_neutral_elements.rs  simpl_unary.rs  unary_composition.rs
src/core/: apply.rs  interface.rs  mod.rs  position.rs  predicate.rs  rule.rs  term.rs
src/core/conversion/: from_rewritable_term.rs  to_rewritable_term.rs
src/core/terms/: mod.rs  position.rs  term.rs
src/metrics/: builtin.rs  mod.rs
src/process/: conf.rs  context.rs  filter.rs  filtration.rs  handler.rs  mod.rs  node.rs  param.rs  priorities.rs  state.rs  step.rs  strategy.rs  traced.rs  untraced.rs
src/process/filter/: elim.rs  filter.rs  mod.rs
src/process/handling/: handler.rs  mod.rs
src/process/loggers/: mod.rs
src/process/verdict/: global.rs  local.rs  mod.rs
src/random_term_generation/: gen.rs  mod.rs  probas.rs  types.rs
src/rewriting_process/: apply.rs  conf.rs  context.rs  filter.rs  handler.rs  mod.rs  node.rs  priorities.rs  state.rs  step.rs
src/rules/: mod.rs
src/rules/combinators/: guard.rs  guarded.rs  mod.rs
src/rules/primitives/: flat_apc.rs  flush.rs  mod.rs  reorder_apc.rs  reorder_pc.rs  root.rs
src/rules/util/: assoc.rs  lpo.rs  mod.rs
src/term/: mod.rs  syntax.rs
src/term/conversion/: from_rewritable_term.rs  mod.rs  to_rewritable_term.rs
src/tests/: lang.rs  mod.rs  rules.rs  test.rs
src/tests/barebones_only/: lang.rs  mod.rs  rules.rs  test.rs
src/tests/boolean_logic/: formulae_generation.rs  lang.rs  mod.rs  test_positions.rs
src/tests/common/: mod.rs  util.rs
src/tests/glog/: drawer.rs  mod.rs  node_drawer.rs  step_drawer.rs  util.rs
tests/: test_guards.rs  test_lang_conversion.rs  test_lang_display.rs  test_lang_metrics.rs  test_lang_random_term_generation.rs  test_lpo.rs  test_metrics_builtin.rs  test_positions.rs  test_rewriting_traced_coherence.rs  test_rewriting_traced_random_regex.rs  test_rewriting_untraced_regex.rs  test_rule_combinator_guarded_on_flat_apc.rs  test_rule_combinator_positionally_guarded_on_root.rs  test_rule_primitive_factorization.rs  test_rule_primitive_flat_apc.rs  test_rule_primitive_flush.rs  test_rule_primitive_reorder_apc.rs  test_rule_primitive_reorder_pc.rs  test_rule_primitive_root.rs  test_strategy_anychild.rs  test_strategy_pipe.rs  test_strategy_repeat.rs  test_strategy_rule.rs  test_strategy_tryallpaths.rs  test_strategy_tryonepath.rs  test_term_eq_hash.rs  test_util_assoc.rs
tests/common/: mod.rs
(+34 files in other folders)
