[package]
name = "simple_term_rewriter"
version = "0.2.8"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "A basic interface to rewrite concrete tree terms according to a set of rules"

readme = "README.md"
repository = "https://github.com/erwanM974/simple_term_rewriter"
homepage = "https://github.com/erwanM974/simple_term_rewriter"

keywords = ["term", "tree", "rewriting"]


[features]
default                = ["builtin_trs","random_term_generation"]
random_term_generation = ["dep:rand"]
builtin_trs            = []


[dependencies]
graphviz_dot_builder          = "0.1.5"
graph_process_manager_core    = "0.2.1"
graph_process_manager_loggers = "0.2.3"
rand                          = { version = "0.9.0", optional = true }

 
[dev-dependencies]
ab_glyph           = "0.2.23"
image              = "0.25.0"
imageproc          = "0.25.0"
image_colored_text = "0.1.3"


