[package]
name = "simple_term_rewriter"
version = "0.3.0"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "A basic interface to rewrite concrete tree terms according to a set of rules"

readme = "README.md"
repository = "https://github.com/erwanM974/simple_term_rewriter"
homepage = "https://github.com/erwanM974/simple_term_rewriter"

keywords = ["term", "tree", "rewriting"]


[features]
default                = ["builtin_trs","random_term_generation","process_draw_with_image"]
random_term_generation = ["dep:rand"]
builtin_trs            = []
process_draw_with_image = ["dep:ab_glyph", "dep:image", "dep:imageproc", "dep:image_colored_text"]

[dependencies]
maplit = "1.0.2"
graphviz_dot_builder          = "0.1.5"
graph_process_manager_core    = "0.3.1"
graph_process_manager_loggers = "0.3.1"
rand                          = { version = "0.9.0", optional = true }
ab_glyph           = { version = "0.2.23", optional = true }
image              = { version = "0.25.0", optional = true }
imageproc          = { version = "0.25.0", optional = true }
image_colored_text = { version = "0.1.3", optional = true }


