[package]
name = "simple_term_rewriter"
version = "0.4.0"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "A basic interface to rewrite concrete tree terms according to a set of rules"

readme = "README.md"
repository = "https://github.com/erwanM974/simple_term_rewriter"
homepage = "https://github.com/erwanM974/simple_term_rewriter"

keywords = ["term", "tree", "rewriting"]



[dependencies]
map-macro = "0.3.0"
rand      = "0.10.1"

hashconsing = "1.7.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "rewriting"
harness = false

[[bench]]
name = "ac_reorder"
harness = false

[[bench]]
name = "random_gen"
harness = false

[[bench]]
name = "metrics"
harness = false

